# Simple-Chat-Protocol

./: .gitignore  CMakeLists.txt  Proyecto.md  README.md
docs/: IMPLEMENTATION.md  SETUP_VM.md  protocol_standard.md
include/chat/: protocol.h  server.h
protos/server-side/: server_response.proto
src/client/: main.cpp  mainwindow.cpp  mainwindow.h  network.cpp  network.h
src/server/: main.cpp  server.cpp
